updated colab - mnist

--- a/example/mnist/gotch_mnist.ipynb
+++ b/example/mnist/gotch_mnist.ipynb
@@ -1859,7 +1859,7 @@
         "%cd /content/gotch/example/mnist\n",
         "!go run . -model=cnn"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,7 +1926,47 @@
             "Epoch: 58\t Loss: 0.01 \t Test accuracy: 99.21%\n",
             "Epoch: 59\t Loss: 0.01 \t Test accuracy: 99.12%\n",
             "Epoch: 60\t Loss: 0.00 \t Test accuracy: 99.12%\n",
-            "Epoch: 61\t Loss: 0.00 \t Test accuracy: 99.05%\n"
+            "Epoch: 61\t Loss: 0.00 \t Test accuracy: 99.05%\n",
+            "Epoch: 62\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 63\t Loss: 0.00 \t Test accuracy: 99.19%\n",
+            "Epoch: 64\t Loss: 0.01 \t Test accuracy: 99.21%\n",
+            "Epoch: 65\t Loss: 0.00 \t Test accuracy: 99.18%\n",
+            "Epoch: 66\t Loss: 0.02 \t Test accuracy: 99.16%\n",
+            "Epoch: 67\t Loss: 0.00 \t Test accuracy: 99.19%\n",
+            "Epoch: 68\t Loss: 0.00 \t Test accuracy: 99.13%\n",
+            "Epoch: 69\t Loss: 0.00 \t Test accuracy: 99.12%\n",
+            "Epoch: 70\t Loss: 0.00 \t Test accuracy: 99.27%\n",
+            "Epoch: 71\t Loss: 0.00 \t Test accuracy: 99.22%\n",
+            "Epoch: 72\t Loss: 0.00 \t Test accuracy: 99.19%\n",
+            "Epoch: 73\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 74\t Loss: 0.00 \t Test accuracy: 99.18%\n",
+            "Epoch: 75\t Loss: 0.00 \t Test accuracy: 99.16%\n",
+            "Epoch: 76\t Loss: 0.00 \t Test accuracy: 99.18%\n",
+            "Epoch: 77\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 78\t Loss: 0.00 \t Test accuracy: 99.15%\n",
+            "Epoch: 79\t Loss: 0.00 \t Test accuracy: 99.09%\n",
+            "Epoch: 80\t Loss: 0.00 \t Test accuracy: 99.16%\n",
+            "Epoch: 81\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 82\t Loss: 0.00 \t Test accuracy: 99.09%\n",
+            "Epoch: 83\t Loss: 0.00 \t Test accuracy: 99.19%\n",
+            "Epoch: 84\t Loss: 0.00 \t Test accuracy: 99.19%\n",
+            "Epoch: 85\t Loss: 0.00 \t Test accuracy: 99.13%\n",
+            "Epoch: 86\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 87\t Loss: 0.00 \t Test accuracy: 99.15%\n",
+            "Epoch: 88\t Loss: 0.00 \t Test accuracy: 99.08%\n",
+            "Epoch: 89\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 90\t Loss: 0.00 \t Test accuracy: 99.15%\n",
+            "Epoch: 91\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 92\t Loss: 0.00 \t Test accuracy: 99.12%\n",
+            "Epoch: 93\t Loss: 0.00 \t Test accuracy: 99.23%\n",
+            "Epoch: 94\t Loss: 0.00 \t Test accuracy: 99.20%\n",
+            "Epoch: 95\t Loss: 0.00 \t Test accuracy: 99.14%\n",
+            "Epoch: 96\t Loss: 0.00 \t Test accuracy: 99.19%\n",
+            "Epoch: 97\t Loss: 0.00 \t Test accuracy: 99.26%\n",
+            "Epoch: 98\t Loss: 0.00 \t Test accuracy: 99.15%\n",
+            "Epoch: 99\t Loss: 0.00 \t Test accuracy: 99.24%\n",
+            "Best test accuracy: 99.27%\n",
+            "Taken time:\t5.06 mins\n"
           ],
           "name": "stdout"
         }
