upgrade to libtorch 1.10

--- a/gen/gen.ml.1.9
+++ b/gen/gen.ml.1.9
@@ -30,18 +30,13 @@ let excluded_functions =
     ; "_cummax_helper"
     ; "retain_grad"
     ; "_validate_sparse_coo_tensor_args"
-    ; "_validate_sparse_csr_tensor_args"
     ; "_backward"
     ; "size"
     ; "stride"
-    ; "histogram_out"
-    ; "histogram"
     ; "_assert_async"
     ; "gradient"
     ; "linalg_vector_norm"
-    ; "linalg_vector_norm_out" 
-    ; "linalg_matrix_norm"
-    ; "linalg_matrix_norm_out"]
+    ; "linalg_vector_norm_out" ]
 
 let no_tensor_options =
   Set.of_list
@@ -134,7 +129,7 @@ module Func = struct
     | "at::device" -> Some Device
     | "const at::scalar &" | "at::scalar" -> Some Scalar
     | "at::scalartype" -> Some ScalarType
-    | "c10::string_view" -> Some String
+    | "std::string" -> Some String
     | _ -> None
 
   let c_typed_args_list t =
@@ -806,8 +801,6 @@ let write_wrapper funcs filename =
             ; "AlignTensors"
             ; "BroadcastTensors"
             ; "Meshgrid"
-            ; "MeshgridIndexing"
-            ; "_ToCpu"
             ; "NonzeroNumpy"
             ; "Split"
             ; "SplitWithSizes"
@@ -1030,8 +1023,6 @@ let write_must_wrapper funcs filename =
             ; "AlignTensors"
             ; "BroadcastTensors"
             ; "Meshgrid"
-            ; "MeshgridIndexing"
-            ; "_ToCpu"
             ; "NonzeroNumpy"
             ; "Split"
             ; "SplitWithSizes"
@@ -1344,7 +1335,7 @@ let run ~yaml_filename ~cpp_filename ~ffi_filename ~must_wrapper_filename
   write_wrapper funcs wrapper_filename
 
 let () =
-  run ~yaml_filename:"gen/pytorch/Declarations-v1.10.0.yaml"
+  run ~yaml_filename:"gen/pytorch/Declarations-v1.9.0.yaml"
     ~cpp_filename:"libtch/torch_api_generated"
     ~ffi_filename:"libtch/c-generated.go"
     ~must_wrapper_filename:"tensor/must-tensor-generated.go"
